from,toを削除して、dateにする
